// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account reducers SET_CURRENT_SUBSCRIPTION should set the credit card (initial state). 1`] = `
Immutable.Map {
  "settings": Immutable.List [],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {},
  },
  "current_subscription": Immutable.Map {
    "products": Immutable.Map {
      "prod_LsH6kV35G6zKWo": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    },
    "status": "active",
  },
}
`;

exports[`current account reducers SET_CURRENT_SUBSCRIPTION should set the credit card and override the previous one. 1`] = `
Immutable.Map {
  "settings": Immutable.List [],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {},
  },
  "current_subscription": {
    "products": {
      "prod_LsH6kV35G6zKWo": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    },
    "staus": "past_due",
  },
}
`;

exports[`current account reducers UPDATE_SUBSCRIPTION_PRODUCTS should set the credit card (initial state). 1`] = `
Immutable.Map {
  "settings": Immutable.List [],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {},
  },
}
`;

exports[`current account reducers UPDATE_SUBSCRIPTION_PRODUCTS should set the credit card and override the previous one. 1`] = `
Immutable.Map {
  "settings": Immutable.List [],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {},
  },
}
`;

exports[`current account reducers update account 1`] = `
{
  "_internal": {
    "loading": {
      "updateAccount": true,
    },
  },
  "settings": [],
}
`;

exports[`current account reducers update account 2`] = `
{
  "_internal": {
    "loading": {
      "updateAccount": false,
    },
  },
  "current_subscription": undefined,
  "settings": [
    {
      "id": 10,
    },
  ],
}
`;

exports[`current account reducers update account 3`] = `
{
  "_internal": {
    "loading": {
      "updateAccount": false,
    },
  },
  "settings": [],
}
`;

exports[`current account reducers update account owner 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "settings": [],
  "user_id": 1,
}
`;

exports[`current account reducers update setting 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "settings": [
    {
      "hello": "world",
    },
  ],
}
`;

exports[`current account reducers update setting 2`] = `
{
  "_internal": {
    "loading": {},
  },
  "settings": [
    {
      "hello": "world",
      "id": 1,
    },
  ],
}
`;

exports[`current account reducers update subscription with an existing subscription 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "current_subscription": {
    "products": {
      "prod_LsH6kV35G6zKWo": "price_1LJBjdI9qXomtXqS8RzPPA7K",
    },
  },
  "settings": [],
}
`;

exports[`current account reducers update subscription without any existing subscription 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "current_subscription": {
    "products": {
      "prod_LsH6kV35G6zKWo": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    },
  },
  "settings": [],
}
`;
